
What's new in Ambulant Player 1.8?
----------------------------------
Changes between 1.6.1 and 1.8:

- Embedding and extending Ambulant has become a lot easier: the Python
  interfaces have been enhanced, examples are provided, the API
  documentation has been updated and embedding now also works on Windows.
  
- The Nokia 770 is supported.

- Gtk can be used as the GUI toolkit for Linux, in addition
  to Qt.
  
- (Mac only) Fullscreen mode has been added.
  
- (Linux and Mac with ffmpeg) Video rendering has greatly improved.

- (Windows) Networked media item support has improved.

- Support for SMIL transitions has been extended (but it is still
  not complete).
  
- RTSP support has been improved.

- HTML rendering is much smoother when displaying different sections
  of the same HTML file (such as for Daisy books).
  
- Very long <seq>uences no longer load all data in advance.

- pause_display now works.

- inBounds, outOfBounds, focusIn and focusOut events now work.

- accessKey works.